--- a/01b_Configuring_the_environment.ipynb
+++ b/01b_Configuring_the_environment.ipynb
@@ -10,17 +10,17 @@
     "tags": []
    },
    "source": [
-    "## Zdalny dostęp do maszyny obliczeniowej\n",
+    "## Remote access to the computing machine\n",
     "\n",
-    "Bardzo często, **w zasadzie zawsze**, nie mamy dostępu bezpośredniego do maszyny, na której są wykonywane obliczenia.\n",
-    "Środowisko Google Colaboratory (Google Colab) dostarcza dostępu do wirtualnych maszyn gdzieś w cyberprzestrzeni.\n",
-    "Maszyny wirtualne są powoływane do życia dla każdego użytkownika, dlatego etap ``Łączenie`` wymaga makroskopowej ilości czasu.\n",
+    "Very often, in fact always, we do not have direct access to the machine on which the calculations are performed.\n",
+    "The Google Colaboratory environment (Google Colab) provides access to virtual machines somewhere in cyberspace.\n",
+    "Virtual machines are brought to life for each user, so the ``Merging`` stage requires a macroscopic amount of time.\n",
     "\n",
-    "Rzadko się jednak zdarza, że ośrodki dostarczające mocy obliczeniowej, np. ICM dostarczają też takiego wygodnego środowiska jak Colab. Zwykle użytkownik musi wykonać parę kroków, by mieć analogiczną funkcjonalność:\n",
+    "However, it is rare that centers providing computing power, such as ICM, also provide a convenient environment like Colab. Usually the user has to follow a few steps to have analogous functionality:\n",
     "\n",
-    "1) łączenie się z maszyną zdalną,\n",
-    "2) uruchomienie usługi typu *Jupyter Server*,\n",
-    "3) połączenie się z usługą z komputera lokalnego - terminala"
+    "1) connecting to a remote machine,\n",
+    "2) starting a service like *Jupyter Server*,\n",
+    "3) connecting to the service from a local computer - a terminal"
    ]
   },
   {
@@ -33,17 +33,17 @@
     "tags": []
    },
    "source": [
-    "## Połączenie z maszyną zdalną\n",
+    "## Connecting to a remote machine\n",
     "\n",
-    "W każdym szanującym się ośrodku komputerowym urządzenia w wewnętrznej sieci komputerowej (Local Area Netowrk, LAN) są odizolowane od sieci rozległej (Wide Area Network, WAN), czyli całego internetu.\n",
+    "In any self-respecting computer center, devices on the internal computer network (Local Area Netowrk, LAN) are isolated from the Wide Area Network (WAN), the entire Internet.\n",
     "\n",
-    "Dostęp do sieci LAN uzyskuje się przez komputer dostępowy - `gateway`. W przypadku studentów Wydziału Fizyki jest to komputer\n",
+    "The LAN is accessed through an access computer - a gateway. In the case of students at the Department of Physics, this is\n",
     "```Bash\n",
     "tempac.okwf.fuw.edu.pl\n",
     "```\n",
     "\n",
-    "Po zalogowaniu się na komputer dostępowy można zalogować się dalej na komputer który dostarcza mocy obliczeniowej, np.\n",
-    "komputery z pracowni:\n",
+    "After logging in to the access computer, you can log in further to the computer that provides computing power, such as\n",
+    "the computers from the lab, e.g.:\n",
     "```Bash\n",
     "pracownia.okwf.fuw.edu.pl\n",
     "```\n"
@@ -59,22 +59,22 @@
     "tags": []
    },
    "source": [
-    "**Proszę:**\n",
+    "**Please:**\n",
     "\n",
-    "* zalogować się na komputer `pracownia` bezpośrednio - nie powinno się udać z sieci `FUW.open`\n",
-    "* zalogować się na komputer `tempac`, a potem na komputer `pracownia` \n",
+    "* log in to the `pracownia` (*laboratory* in english) computer directly - this should not be possible from the `FUW.open` network\n",
+    "* log on to the `tempac` computer, and then to the `pracownia` computer\n",
     "\n",
-    "Instrukcje:\n",
+    "Instructions:\n",
     "\n",
-    "* Linux - należy otworzyć okno terminala\n",
-    "* Windows - aplikacje -> szukaj -> cmd\n",
+    "* Linux - open a terminal window\n",
+    "* Windows - applications -> search -> cmd\n",
     "\n",
-    "W oknie terminala należy użyć komendy `ssh`:  \n",
+    "Use the `ssh` command in the terminal window:  \n",
     "  ```Bash\n",
     "  ssh login@tempac.okwf.fuw.edu.pl\n",
     "  ```\n",
     "\n",
-    "i po zalogowaniu na `tempac` jeszcze raz:\n",
+    "and after logging on 'tempac' once again use:\n",
     "\n",
     "  ```Bash\n",
     "  ssh login@pracownia.okwf.fuw.edu.pl\n",
@@ -91,14 +91,14 @@
     "tags": []
    },
    "source": [
-    "Po zalogowaniu się można uruchomić odpowiednią usługę. Oczywiście takie logowanie w dwu krokach jest bardzo niewygodne.\n",
-    "Można je ułatwić używając tunelowania sieciowego. W tym celu trzeba dodać odpowiedni wpis do konfiguracji programu `ssh`\n",
-    "(ta sama lokalizacja na Linux i Windows):\n",
+    "After logging in, you can start the appropriate service. Of course, such a two-step login is very inconvenient.\n",
+    "You can make it easier by using network tunneling. To do this, you need to add the appropriate entry to the 'ssh' configuration\n",
+    "( thesame location on both Linux and Windows):\n",
     "```Bash\n",
     ".ssh/config\n",
     "```\n",
     "\n",
-    "Jeśli nie ma takiego pliku w katalogu użytkownika, to należy go stworzyć. W pliku `config` umieszczamy bloki konfigurujące dostęp do zdalnych maszyn. W przypadku pracowni taki blok powinien wyglądać następująco:\n",
+    "If there is no such file in the user's directory, create one. In the `config` file we place blocks that configure access to remote machines. In the case of the laboratory, such a block should look as follows:\n",
     "```Bash\n",
     "Host pracownia\n",
     "     ForwardX11 yes\n",
@@ -123,10 +123,10 @@
     "tags": []
    },
    "source": [
-    "**Proszę:**\n",
+    "**Please:**\n",
     "\n",
-    "* zmodyfikować swój plik `.ssh/config` i dodać wpis dla komputera `pracownia`\n",
-    "* zalogować się na komputer `pracownia`:\n",
+    "* modify your `.ssh/config` file and add an entry for the `pracownia` computer\n",
+    "* log in to the `pracownia`computer:\n",
     "  ```Bash\n",
     "  \n",
     "  ssh pracownia\n",
@@ -143,28 +143,28 @@
     "tags": []
    },
    "source": [
-    "**Proszę:**\n",
+    "**Please:**\n",
     "\n",
-    "* uruchomić kontener zawierający środowisko przygotowane dla naszych zajęć:\n",
+    "* start the container containing the environment prepared for our classes:\n",
     "```Shell\n",
     "~akalinow/Publiczny/UczenieMaszynoweII/ml_lecture\n",
     "```\n",
-    "* w kontenerze uruchomić serwer jupyter:\n",
+    "* in the container start the jupyter server:\n",
     "```Shell\n",
     "jupyter lab --no-browser --ip=0.0.0.0 --notebook-dir=$HOME\n",
     "```\n",
-    "* otworzyć okno Jupyter na lokalnym komputerze używając URL wypisanego w oknie gdzie uruchomiono serwer, np.:\n",
+    "* open a Jupyter window on the local machine using the URL listed in the window where the server was started, e.g:\n",
     "```Shell\n",
     "http://127.0.0.1:8888/lab?token=e7862a89b9fe602cb31391359f8516376\n",
     "```\n",
     "\n",
-    "**Uwaga 1:** proszę zwrócić uwagą na adres - trzeba użyć adresu IP lokalnego komputera: `127.0.0.1`.\n",
-    "dostęp przez adres IP lub DNS komputera zdalnego,  ```pd100.odk.fuw.edu.pl``` zadziała jedynie jeśli łączymy się z komputera\n",
-    "w tej samej sieci LAN co komputer ```pd100```, czyli np. sieci wewnętrznej FUW.\n",
+    "**Note 1:** please pay attention to the address - you need to use the IP address of the local computer: `127.0.0.1.`.\n",
+    "ccess via the IP or DNS address of the remote computer, ```pd100.odk.fuw.edu.pl``` will only work if you connect from a computer\n",
+    "on the same LAN as the ```pd100``` computer, that is the FUW internal network, for example.\n",
     "\n",
-    "**Uwaga 2:** komputery ```pracownia``` nie nadają się do treningu modeli uczenia maszynowego. Kroki powyżej stanowią jedynie trening.\n",
+    "**Note 2:** computers ```pracownia```  are not suitable for training machine learning models. The steps above serve as training only.\n",
     "\n",
-    "**Uwaga 3:** analogiczny dostęp można uzyskać z wtyczką ```Remote explorer``` do Visual Studio."
+    "**Note 3:** analogous access can be obtained with the ```Remote explorer``` plug-in for Visual Studio."
    ]
   },
   {
@@ -177,12 +177,12 @@
     "tags": []
    },
    "source": [
-    "Środowisko programistyczne: interpreter Python i potrzebne biblioteki można instalować samodzielne.\n",
-    "Dużo wygodniejszą opcją są kontenery - zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
-    "i uzyskać ściśle określone środowisko pracy.\n",
+    "Development environment: the Python interpreter and the necessary libraries can be installed independently.\n",
+    "A much more convenient option are containers - sets of software, including the operating system, which can be run on any machine\n",
+    " and get a well-defined working environment.\n",
     "\n",
-    "1) instalacja programów do zarządzania kontenerami: [Docker](https://docs.docker.com/)\n",
-    "2) uruchomienie konkretnego kontenera\n"
+    "1) Installation of container management software: [Docker](https://docs.docker.com/)\n",
+    "2) launching a specific container\n"
    ]
   },
   {
@@ -195,14 +195,14 @@
     "tags": []
    },
    "source": [
-    "# Zadanie domowe \n",
+    "# Homework\n",
     "\n",
-    "**Proszę:**\n",
+    "**Please:**\n",
     "\n",
-    "* osoby z laptopami z Windows: o instalację aplikacji [Docker Desktop](https://docs.docker.com/desktop/install/windows-install/)\n",
-    "* osoby z laptopami z Linuksem: o instalację pakietu [Docker Engine](https://docs.docker.com/engine/install/ubuntu)\n",
-    "* po instalacji proszę uruchomić testowy kontener `hello_world`\n",
-    "  (Windows - proszę otworzyć okno powłoki: `power shell` i pominąć komendę `sudo`):\n",
+    "* people with Windows laptops:: install [Docker Desktop application](https://docs.docker.com/desktop/install/windows-install/)\n",
+    "* people with Linux laptops: install [Docker Engine application](https://docs.docker.com/engine/install/ubuntu)\n",
+    "* after installation, please run the `hello_world` test container\n",
+    "  (Windows - please open shell window: `power shell` and skip `sudo` command)::\n",
     "  ```Shell\n",
     "  sudo docker run hello-world\n",
     "  ```"
@@ -223,7 +223,7 @@
     "tags": []
    },
    "source": [
-    "Oczekiwany wynik:\n",
+    "Expected result:\n",
     "\n",
     "![image.png](attachment:3e2ab613-6802-47a1-bcc3-df5d6126de3f.png)"
    ]
@@ -238,14 +238,14 @@
     "tags": []
    },
    "source": [
-    "# Kontener przygotowany na zajęcia\n",
+    "# A container prepared for the class\n",
     "\n",
-    "Do wykładu został przygotowany kontener zawierający potrzebne pakiety Python oraz server Jupyter. \n",
+    "A container containing the necessary Python packages and Jupyter server has been prepared for the lecture.\n",
     "\n",
     "\n",
-    "**Proszę:**\n",
+    "**Please:**\n",
     "\n",
-    "* pobrać i uruchomić kontener [akalinow/ml_lecture](https://hub.docker.com/repository/docker/akalinow/ml_lecture/general)\n",
+    "* download and run the [akalinow/ml_lecture](https://hub.docker.com/repository/docker/akalinow/ml_lecture/general) container\n",
     "\n",
     "\n",
     "Linux:\n",
@@ -277,15 +277,15 @@
     "tags": []
    },
    "source": [
-    "Oczekiwany wynik:\n",
+    "Expected result:\n",
     "\n",
     "![image.png](attachment:ac498f92-865f-450f-9748-12e5bb032afa.png)\n",
     "\n",
     "<br></br>\n",
     "\n",
-    "**Uwaga 1:** użycie GPU na lokalnym komputerze wymaga kilku dodatkowych kroków. Zainteresowane osoby proszę o kontakt.\n",
+    "**Note 1:** using the GPU on a local computer requires a few extra steps. If you are interested, please contact me.\n",
     "\n",
-    "**Uwaga 2:** na maszynach pod Linux polecam użycie [apptainer](https://apptainer.org/getting-started) zamiast Dockera. W apptainer można uruchamiać także kontenery zbudowane z Dockerem\n"
+    "**Note 2:** on Linux machines, I recommend using [apptainer](https://apptainer.org/getting-started) instead of Docker. You can also run containers built with Docker in apptainer\n"
    ]
   },
   {
@@ -298,11 +298,11 @@
     "tags": []
    },
    "source": [
-    "**Proszę:**\n",
+    "**Please:**\n",
     "\n",
-    "* otworzyć adres URL serwera Jupyter ze swojej lokalnej maszyny\n",
-    "* pobrać notatnik `01a_Przypomnienie_python.ipynb` na lokalny komputer\n",
-    "* uruchomić wszystkie komórki w notatniku na lokalnym komputerze"
+    "* open the URL of the Jupyter Server from your local machine\n",
+    "* download notebook `01a_Python_refresher.ipynb` to your local computer\n",
+    "* run all the cells in the notebook on your local computer"
    ]
   },
   {
@@ -320,15 +320,15 @@
     "tags": []
    },
    "source": [
-    "Notatniki Jupyter można także uruchamiać w Visual Studio.\n",
-    "Jako jądra wykonawczego można użyć jądra dostarczonego przez kontener:\n",
+    "Jupyter notebooks can also be run in Visual Studio.\n",
+    "You can use the kernel provided by the container as the execution kernel:\n",
     "\n",
     "![image.png](attachment:735ebe7a-c5ca-4dbf-a405-5a4aa9675b2b.png)\n",
     "\n",
-    "Dzięki temu mamy:\n",
+    "This way we have:\n",
     "\n",
-    "* zalety z używania Visual Studio - duża liczba przydatnych wtyczek, autouzupełniania (`dumb` i `AI`)\n",
-    "* zalety z używania kontenera - uniknięcie ręcznego instalowania wymaganych pakietów"
+    "* advantages from using Visual Studio - a large number of useful plugins, autocomplete (`dumb` and `AI`)\n",
+    "* advantages from using the container - avoiding manual installation of required packages"
    ]
   },
   {
