--- a/01b_Configuring_the_environment.ipynb
+++ b/01b_Configuring_the_environment.ipynb
@@ -74,7 +74,7 @@
     "  ssh login@tempac.okwf.fuw.edu.pl\n",
     "  ```\n",
     "\n",
-    "and after logging on 'tempac' once again use:\n",
+    "and after logging on `tempac` once again use:\n",
     "\n",
     "  ```Bash\n",
     "  ssh login@pracownia.okwf.fuw.edu.pl\n",
