* move fig_png folders into language subdirectories * fix typos

--- a/EN/01b_Configuring_the_environment.ipynb
+++ b/EN/01b_Configuring_the_environment.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "**Note 1:** using the GPU on a local computer requires a few extra steps. If you are interested, please contact me.\n",
     "\n",
-    "**Note 2:** on Linux machines, I recommend using [apptainer](https://apptainer.org/getting-started) instead of Docker. You can also run containers built with Docker in apptainer\n"
+    "**Note 2:** on Linux machines, I recommend using [apptainer](https://apptainer.org/get-started) instead of Docker. You can also run containers built with Docker in apptainer\n"
    ]
   },
   {
