--- a/PL/01b_Konfiguracja_srodowiska.ipynb
+++ b/PL/01b_Konfiguracja_srodowiska.ipynb
@@ -257,6 +257,7 @@
     "Windows:\n",
     "```\n",
     "mkdir %USERPROFILE%\\Docker\n",
+    "set WORKING_DIR=%USERPROFILE%\\Docker\n",
     "docker pull akalinow/ml_lecture\n",
     "docker run --name ml_lecture -v %WORKING_DIR%:/scratch -w /home/jupyter -p 8000:8000 akalinow/ml_lecture /home/jupyter/start-jupyter.sh\n",
     "```"
@@ -285,7 +286,9 @@
     "\n",
     "**Uwaga 1:** użycie GPU na lokalnym komputerze wymaga kilku dodatkowych kroków. Zainteresowane osoby proszę o kontakt.\n",
     "\n",
-    "**Uwaga 2:** na maszynach pod Linux polecam użycie [apptainer](https://apptainer.org/getting-started) zamiast Dockera. W apptainer można uruchamiać także kontenery zbudowane z Dockerem\n"
+    "**Uwaga 2:** na maszynach pod Linux polecam użycie [apptainer](https://apptainer.org/get-started) zamiast Dockera. W apptainer można uruchamiać także kontenery zbudowane z Dockerem\n",
+    "\n",
+    "**Uwaga 3:** komenda w wersji dla Windows nie ma parametru `--rm` co oznacza że pliki kontenera są zachowane po jego zamknięciu. Komendy `docker run` należy użyć tylko za pierwszym razem. Przy kolejnych sesjach trzeba urucomić kontener wybierając jego nazwę z listy w aplikacji Docker desktop.\n"
    ]
   },
   {
