--- a/EN/01b_Configuring_the_environment.ipynb
+++ b/EN/01b_Configuring_the_environment.ipynb
@@ -257,6 +257,7 @@
     "Windows:\n",
     "```\n",
     "mkdir %USERPROFILE%\\Docker\n",
+    "set WORKING_DIR=%USERPROFILE%\\Docker\n",
     "docker pull akalinow/ml_lecture\n",
     "docker run --name ml_lecture -v %WORKING_DIR%:/scratch -w /home/jupyter -p 8000:8000 akalinow/ml_lecture /home/jupyter/start-jupyter.sh\n",
     "```"
