--- a/PL/01b_Konfiguracja_srodowiska.ipynb
+++ b/PL/01b_Konfiguracja_srodowiska.ipynb
@@ -179,10 +179,7 @@
    "source": [
     "Środowisko programistyczne: interpreter Python i potrzebne biblioteki można instalować samodzielne.\n",
     "Dużo wygodniejszą opcją są kontenery - zestawy oprogramowania, włącznie z systemem operacyjnym, które można uruchomić na dowolnej maszynie\n",
-    "i uzyskać ściśle określone środowisko pracy.\n",
-    "\n",
-    "1) instalacja programów do zarządzania kontenerami: [Docker](https://docs.docker.com/)\n",
-    "2) uruchomienie konkretnego kontenera\n"
+    "i uzyskać ściśle określone środowisko pracy. Po wstępnej konfiguracji praca z kontenerami jest bardzo łatwa."
    ]
   },
   {
@@ -381,18 +378,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
   },
   "rise": {
    "center": false,
