* fix bug with ellipse definition

--- a/PL/02_Podstawowe_pojecia.ipynb
+++ b/PL/02_Podstawowe_pojecia.ipynb
@@ -1499,7 +1499,7 @@
     "\n",
     "**Proszę:**\n",
     "\n",
-    "Użyć algorytmu zejścia po gradiencie do znalezienia zbioru `nPoints=100` punktów dla których suma odległości od dwu ustalonych punktów: `f1` oraz `f2` jest taka sama i wynosi $\\epsilon a$. \n",
+    "Użyć algorytmu zejścia po gradiencie do znalezienia zbioru `nPoints=100` punktów dla których suma odległości od dwu ustalonych punktów: `f1` oraz `f2` wynosi $2a$. \n",
     "Proszę przyjąć `epsilon= 0.5`, `a=10`, `f1=(-5,0)`, `f2=(5,0)`\n",
     "\n",
     "* proszę narysować znalezione punkty na rysunku o osiach w zakresie $\\pm 12$\n",
