--- a/EN/02_Fundamental_concepts.ipynb
+++ b/EN/02_Fundamental_concepts.ipynb
@@ -1452,7 +1452,7 @@
     "\n",
     "**Please:**\n",
     "\n",
-    "Use the gradient descent algorithm to find a set of `nPoints=100` points for which the sum of distances between two given points: `f1` and `f2` is the same and equal to $\\epsilon a$. \n",
+    "Use the gradient descent algorithm to find a set of `nPoints=100` points for which the sum of distances between two given points: `f1` and `f2` is equal to $2a$. \n",
     "Please use `epsilon= 0.5`, `a=10`, `f1=(-5,0)`, `f2=(5,0)`\n",
     "\n",
     "* draw the set of points on a figure with axes in the range $\\pm 12$\n",
@@ -1603,7 +1603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.0rc1"
   },
   "rise": {
    "center": false,
