--- a/PL/07_Sieci_ze_splotem_2.ipynb
+++ b/PL/07_Sieci_ze_splotem_2.ipynb
@@ -746,19 +746,6 @@
     "    callbacks = [early_stop_callback]\n",
     "    callbacks = []\n",
     "    \n",
-    "    dataset = tf.data.Dataset.from_generator(\n",
-    "         discGenerator,\n",
-    "         output_signature=(\n",
-    "             (tf.TensorSpec(shape=(3), dtype=tf.int32),\n",
-    "             tf.TensorSpec(shape=(res,res,1), dtype=tf.int32)))\n",
-    "    )\n",
-    "    '''    \n",
-    "    history = model.fit(x=dataset.batch(batchSize).take(nStepsPerEpoch).cache(),\n",
-    "                        epochs=nEpochs, \n",
-    "                        callbacks=callbacks,\n",
-    "                        validation_data=dataset.batch(batchSize).take(100).cache(),\n",
-    "                        verbose=0)\n",
-    "    '''\n",
     "    history = model.fit(x=features, y=labels,\n",
     "                        epochs=nEpochs, \n",
     "                        callbacks=callbacks,\n",
@@ -1357,7 +1344,13 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1605,33 +1598,6 @@
     "#END_SOLUTION\n",
     "pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nEpochs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1660,7 +1626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0rc1"
   },
   "rise": {
    "center": false,
