* fix bug in quadratic equation solution * adapt notebooks to Keras 3.0

--- a/PL/05_Sieci_w_pelni_polaczone_2.ipynb
+++ b/PL/05_Sieci_w_pelni_polaczone_2.ipynb
@@ -5,6 +5,9 @@
    "metadata": {
     "editable": true,
     "id": "7xQVLckhK-Bd",
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "source": [
