* updates on notebooks 08 and 09

--- a/PL/08_Zaawansowane_narzedzia.ipynb
+++ b/PL/08_Zaawansowane_narzedzia.ipynb
@@ -1496,26 +1496,17 @@
     "\n",
     "**Proszę:**\n",
     "\n",
-    "* pobrać zbiór fragmentów tekstow w języku polskim: [link](https://drive.google.com/drive/folders/18vDJPEZd2C6_-TualBIhsR5zmbhDA00D?usp=drive_link)\n",
-    "zbiór pochodzi ze [Wzbogaconego korpusu słownika frekwencyjnego polszczyzny współczesnej](https://clarin-pl.eu/dspace/handle/11321/715)\n",
+    "* napisać funkcję `load_wksf_dataset(filePath)`, wczytującą i wstępnie przetwarzającą  zbiór fragmentów tekstow w języku polskim: [link](https://drive.google.com/drive/folders/18vDJPEZd2C6_-TualBIhsR5zmbhDA00D?usp=drive_link) pochodzący ze [Wzbogaconego korpusu słownika frekwencyjnego polszczyzny współczesnej](https://clarin-pl.eu/dspace/handle/11321/715)\n",
+    "* funkcja powinna wykonywać następujące kroki:\n",
+    "  * wczytywanie wszystkich plików w katalogu podanym jako `filePath` do obiektu `tf.data.Dataset` \n",
+    "  * przetwarza powstały obiekt by usunąć:\n",
+    "    * informację o źródle cytatu\n",
+    "    * odnośniki w tekście\n",
+    "    * fragmenty typu `[/]` \n",
     "\n",
-    "* dane z plików `a-publi.txt`  `b-prasa.txt`  `c-popul.txt`  `d-proza.txt`  `e-dramat.txt` wczytać do obiektu `tf.data.Dataset` \n",
-    "* powstały obiekt przetworzyć by usunąć:\n",
-    "  * informację o źródle cytatu\n",
-    "  * odnośniki w tekście\n",
-    "  * fragmenty typu `[/]` \n",
-    "\n",
-    " * wypisać pierwsze pięć cytatów\n",
+    "* funkcję umieścić w pliku `text_functions.py`\n",
+    " * uruchomić komórkę poniżej\n",
     " \n",
-    "Oczekiwany wynik:\n",
-    "```Bash\n",
-    "Sztuka utraciła swoją moc pobudzającą: przykrym widowiskiem staje się koncert wybitnej niegdyś śpiewaczki i nie uświetnią go nawet nigdy dotąd nie wykonywane utwory genialnego kompozytora. Słuchacze myślą o czym innym, rozmawiają o czym innym i śpiewaczka, postarzawszy się, głos straciła. Nie było dotąd takich koncertów u Iwaszkiewicza.\n",
-    "Stosunek tych dwóch rodzajów mieszczan układa się tak, że solidny obywatel uważa egzystencję poety czy malarza za mocno wątpliwą, podejrzaną: ten zaś rewanżuje się pogardą i krytycznym stanowiskiem wobec „nieartystycznego” przedstawiciela klasy, z której sam wyszedł (ta wzajemna nieufność i niechęć zaznacza się już zresztą w [„]Buddenbrookach[”] porównaj postać Gerdy).\n",
-    "Wzrasta w stosunku do całej puli eksportowej eksport drewna najwyższych gatunków i przetworów (meble, płyty pilśniowe), maleje eksport drewna surowca, natomiast rośnie import gatunków tanich, a w Polsce deficytowych. Tendencja zdrowa. Inwestycje w przemyśle towarzyszącym gospodarce leśnej są poważne.\n",
-    "Pisze się o literaturze jako kolekcji nazwisk albo prądów artystycznych. Bywa to wszystko słuszne, piękne, ale jest zawsze „tradycjonalne” albo „idylliczne”. Książka Szewczyka pomija pokusy przejrzystego wykładu akademickiego. Ale jest pierwsza, jaką dziś czytam, o politycznym dramacie literatury. Oglądanym nie poprzez przypadki wyjątkowe i kliniczne, ale w jej sytuacji powszedniej.\n",
-    "Przecież pamiętam tę twarz widzianą na tle zamierzonych sukcesów w walce z biurokracją, lenistwem, niechęcią, znieczulicą. Przewodniczący robił odprawy, gromił, sam rozprowadzał petentów po różnych wydziałach i pokojach, najeżdżał terenowe ogniwa, wydawał okólniki, korygował, pouczał - po każdej takiej fali natchnienia jego twarz wydawała mi się wzniosła i oczyszczona.\n",
-    "```\n",
-    "\n",
     "**Wskazówka:**\n",
     "* mozna użyć funkcji `tf.strings.regex_full_match(...)` oraz `tf.strings.regex_replace(...)` do filtrowania linii lub zastępowania\n",
     "  fragmentów napisów\n",
@@ -1524,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1554,23 +1545,14 @@
     }
    ],
    "source": [
-    "##BEGIN_SOLUTION\n",
-    "import glob \n",
-    "filePath = \"scratch/Zajecia/2023-2024/Lato/Uczenie_maszynowe_2/UczenieMaszynoweII/data/wksf/Korpus_surowy/\"\n",
+    "import text_functions as txtfunc\n",
+    "importlib.reload(txtfunc)\n",
+    "\n",
     "filePath = \"../data/wksf/Korpus_surowy/\"\n",
+    "dataset = txtfunc.load_wksf_dataset(filePath)\n",
     "\n",
-    "fileList = glob.glob(filePath + \"/*.txt\")\n",
-    "dataset = tf.data.TextLineDataset(fileList)\n",
-    "dataset = dataset.filter(lambda x: not tf.strings.regex_full_match(x, \".*[~].*\"))\n",
-    "dataset = dataset.filter(lambda x: not tf.strings.regex_full_match(x, \".*[<].*\"))\n",
-    "dataset = dataset.map(lambda x: tf.strings.regex_replace(x, \"\\[[a-zA-Z0-9*]+\\]\", \"\", replace_global=True))\n",
-    "dataset = dataset.map(lambda x: tf.strings.regex_replace(x, \"\\[/\\]\", \"\", replace_global=True))\n",
-    "\n",
-    "vectorize_layer = tf.keras.layers.TextVectorization(output_mode = \"int\")\n",
-    "vectorize_layer.adapt(dataset.batch(128))\n",
-    "\n",
-    "#END_SOLUTION\n",
     "for item in dataset.take(5):\n",
+    "    print(colored(\"Item:\",\"blue\"), end=\" \")\n",
     "    print(item.numpy().decode(\"utf-8\"))\n"
    ]
   },
