--- a/PL/05_Sieci_w_pelni_polaczone_2.ipynb
+++ b/PL/05_Sieci_w_pelni_polaczone_2.ipynb
@@ -1430,13 +1430,13 @@
     "\n",
     "**Proszę:**\n",
     "\n",
-    "* wczytrać zbiór `emnist-balanced-train` (uwaga pliki są duże i długo ładują się na Colab!)\n",
+    "* wczytrać zbióry `emnist-balanced-train` i `emnist-balanced-test`(uwaga pliki są duże i długo ładują się na Colab!)\n",
     "* wybrać przykłady o numerze klasy mniejszym niż 36, czyli cyfry i małe litery\n",
     "* zdefiniować i przeprowadzić trening modelu.\n",
     "  **Kod powinien jedynie używać funkcji zdefiniowanych w komórkach\n",
     "  zadania domowego i module `emnist_functions`**\n",
     "* kod treningu i rysowania powinien znaleźć się w odzielnych komórkach\n",
-    "* wypisać na ekran dokładność, `accuracy`, modelu na zbiorach treningowym i `emnist-balanced-test`\n",
+    "* wypisać na ekran dokładność, `accuracy`, modelu na zbiorach treningowym i testowym\n",
     "* dla zbiorów treningowego i testowego narysować macierze pomyłek z odpowiednimi etykietami na osiach\n",
     "* wskazać klasy, które słabo się separują\n",
     "* odkodować komunikat zapisany w pliku [encoded.npz](http://studenci.fuw.edu.pl/~akalinow/encoded.npz)\n",
@@ -1590,7 +1590,8 @@
     "model.evaluate(x_train, y_train)\n",
     "print(colored(\"Evaluation on test dataset:\",\"blue\"))\n",
     "model.evaluate(x_test, y_test);\n",
-    "#END_SOLUTION"
+    "#END_SOLUTION\n",
+    "pass"
    ]
   },
   {
