--- a/EN/04_Fully_connected_networks_1.ipynb
+++ b/EN/04_Fully_connected_networks_1.ipynb
@@ -1389,8 +1389,9 @@
     "#BEGIN_SOLUTION\n",
     "inputShape = (3,)\n",
     "\n",
-    "#nNeurons = np.full((16),128) #1500 epok 87% nStepsPerEpoch*15\n",
-    "nNeurons = np.full((16),256) #1500 epok 90% nStepsPerEpoch*20\n",
+    "#nNeurons = np.full((16),64) #1500 epochs x=85% nStepsPerEpoch*15\n",
+    "#nNeurons = np.full((16),128) #1500 epochs x=87% nStepsPerEpoch*15\n",
+    "nNeurons = np.full((16),256) #1500 epoch x=90% nStepsPerEpoch*20\n",
     "\n",
     "nOutputNeurons = 2\n",
     "\n",
