--- a/PL/04_Sieci_w_pelni_polaczone_1.ipynb
+++ b/PL/04_Sieci_w_pelni_polaczone_1.ipynb
@@ -1845,21 +1845,9 @@
     "#BEGIN_SOLUTION\n",
     "inputShape = (3,)\n",
     "\n",
-    "#nNeurons = np.full((16),16) #300 epok, 9% \n",
-    "#nNeurons = np.full((16),32) #300 epok 25%\n",
-    "nNeurons = np.full((16),64) #300 epok  36%\n",
-    "nNeurons = np.full((16),64) #300 epok  63% nStepsPerEpoch*10\n",
-    "nNeurons = np.full((16),64) #300 epok  68% nStepsPerEpoch*10, uniform(-1,1) bias\n",
-    "nNeurons = np.full((16),64) #300 epok  49% nStepsPerEpoch*15\n",
-    "nNeurons = np.full((16),64) #300 epok  53% nStepsPerEpoch*20\n",
-    "nNeurons = np.full((16),64) #3000 epok  (wystarczy 1500) 82% nStepsPerEpoch*10\n",
-    "nNeurons = np.full((16),64) #1500 epok 85% nStepsPerEpoch*15\n",
-    "\n",
-    "nNeurons = np.full((16),128) #1500 epok 87% nStepsPerEpoch*15\n",
-    "nNeurons = np.full((16),256) #1500 epok 90% nStepsPerEpoch*20\n",
-    "\n",
-    "#nNeurons = np.full((16), 128) #300 epok 0%\n",
-    "#nNeurons = np.full((24),64) #300 epok 31%\n",
+    "#nNeurons = np.full((16),64) #1500 epochs x=85% nStepsPerEpoch*15\n",
+    "#nNeurons = np.full((16),128) #1500 epochs x=87% nStepsPerEpoch*15\n",
+    "nNeurons = np.full((16),256) #1500 epoch x=90% nStepsPerEpoch*20\n",
     "\n",
     "nOutputNeurons = 2\n",
     "\n",
