* first commit of notebook for RNN

--- a/PL/04_Sieci_w_pelni_polaczone_1.ipynb
+++ b/PL/04_Sieci_w_pelni_polaczone_1.ipynb
@@ -1723,7 +1723,7 @@
     "  $$\n",
     "* proszę obliczyć wartość metryki:\n",
     "  $$\n",
-    "  x = \\text{ułamek przypadków dla których}~\\delta<10^{-2}\n",
+    "  x = \\text{ułamek przypadków dla których}~|\\delta|<10^{-2}\n",
     "  $$\n",
     "\n",
     "Można próbować wszyskiego (poza oszukiwaniem), by uzyskać dobrą precyzję modeli. \"Dobra\" precyzja to $x>0.1$.\n",
