* fix typos * work on RNN notebook

--- a/PL/07_Sieci_ze_splotem_2.ipynb
+++ b/PL/07_Sieci_ze_splotem_2.ipynb
@@ -651,7 +651,7 @@
     "* narysować zmianę funkcji straty w funkcji numeru epoki na zbiorze treningowym i walidacyjnym\n",
     "* jako zbioru walidacyjnego użyć `10%` zbioru podanego jako treningowy\n",
     "* kod trenujący powinien być zawarty w funkcji `trainModel(model, nEpochs)` i zawierać:\n",
-    "    * harmonogram zmiany współczynika uczenia\n",
+    "    * harmonogram zmiany współczynnika uczenia\n",
     "    * wywołanie wczesnego zatrzymania (sprawdzić wyniki bez zatrzymania)\n",
     "    * rysowane historii funkcji straty\n",
     "    * jako funkcji straty proszę użyć entropii krzyżowej: `binary_crossentropy` - każdy z pikseli należy do jednej z dwu klas: `biały/czarny`\n",
