--- a/PL/06_Sieci_ze_splotem_1.ipynb
+++ b/PL/06_Sieci_ze_splotem_1.ipynb
@@ -1702,7 +1702,7 @@
    "source": [
     "# Zadanie domowe\n",
     "\n",
-    "Trening klasyfikatora **konwolucyjnego** na zbiorze liter i cyfr `emnist-byclass-train`.\n",
+    "Trening klasyfikatora **konwolucyjnego** na zbiorze liter i cyfr `emnist-balanced-train`.\n",
     "\n",
     "**Proszę:**\n",
     "\n",
