--- a/PL/07_Sieci_ze_splotem_2.ipynb
+++ b/PL/07_Sieci_ze_splotem_2.ipynb
@@ -1125,11 +1125,11 @@
     "    for index, axis in enumerate(axes.flat):\n",
     "        \n",
     "        data_index = data_indices[index]\n",
-    "        encoded = labels[data_index:data_index+1]\n",
+    "        image = labels[data_index:data_index+1]\n",
     "\n",
-    "        model.evaluate(encoded,encoded)\n",
+    "        model.evaluate(image, image)\n",
     "        \n",
-    "        z = encoder.predict(encoded, verbose=0)\n",
+    "        z = encoder.predict(image, verbose=0)\n",
     "        image = decoder.predict(z, verbose=0)[0,:,:,0]\n",
     "        axis.imshow(image, cmap='binary', origin='lower')\n",
     "        axis.set_title(str(features[data_index]));\n",
