--- a/PL/08_Potoki_danych.ipynb
+++ b/PL/08_Potoki_danych.ipynb
@@ -456,6 +456,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```Python\n",
+    "dataset = dataset.filter(func)    - # filtruje zbiór na podstawie odpowiedzi\n",
+    "                                    # funkcji func(...) przyjmującej wiersz ze zbioru\n",
+    "                                    # jako argument\n",
+    "                              \n",
+    "```\n",
+    "\n",
+    "```Python\n",
+    "dataset = dataset.shuffle(buffer_size) - # tasuje zbiór używając bufora o rozmiarze \n",
+    "                                         # buffer_size \n",
+    "                              \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "editable": true,
     "slideshow": {
