--- a/PL/03_Trening_modelu.ipynb
+++ b/PL/03_Trening_modelu.ipynb
@@ -184,6 +184,28 @@
     "tags": []
    },
    "source": [
+    "Wielomiany stopnia n nie są jednak zbyt dobrymi funkcjami bazy:\n",
+    "\n",
+    "* uzyskanie dużej precyzji wymaga użycia wysokiego stopnia, a to generuje problemy ze stabilnością numeryczną\n",
+    "* dane wielowymiarowe powodują dodatkowe komplikacje - pojawiają się mieszane potęgi składowych danych:\n",
+    "\n",
+    "$$\n",
+    "\\huge{\n",
+    "x_{0}x_{1},~x_{0}^{3}x_{1}^{58},~\\text{etc.}\n",
+    "}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
     "* funkcje aktywacji pełnią rolę bazy - różnią się między sobą. Różnica jest zwykle sparametryzowana.\n",
     "\n",
     "$$\n",
